fixed alignment

--- a/style.css
+++ b/style.css
@@ -1,21 +1,3 @@
-:root {
-  --outer-shadow:
-    0 0 0.1vw 0.4vw #e0f7fa,
-    0 0 0.4vw 0.6vw #00e5ff,
-    0 0 1vw 0.4vw #26c6da;
-  --inner-shadow:
-    inset 0 0 0.1vw 0.4vw #e0f7fa,
-    inset 0 0 0.4vw 0.6vw #00e5ff,
-    inset 0 0 1vw 0.4vw #26c6da;
-  --all-shadow:
-    0 0 0.1vw 0.4vw #e0f7fa,
-    0 0 0.4vw 0.6vw #00e5ff,
-    0 0 1vw 0.4vw #26c6da,
-    inset 0 0 0.1vw 0.4vw #e0f7fa,
-    inset 0 0 0.4vw 0.6vw #00e5ff,
-    inset 0 0 1vw 0.4vw #26c6da;
-}
-
 @font-face {
   font-family: NewAgeVintage;
   src: url("fonts/NewAgeVintage/NewAgeVintageRegular.otf") format("opentype");
@@ -52,9 +34,9 @@ body {
   background-attachment: scroll;
 }
 
-.main-wrapper {
+/* .main-wrapper {
   height: 100%;
-}
+} */
 
 .hero {
   height: 100%;
@@ -76,7 +58,7 @@ body {
 .video-wrapper {
   height: 100%;
   width: 100%;
-  position: relative;
+  /* position: relative; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -84,27 +66,28 @@ body {
   overflow: hidden;
 }
 
-.cocnfetti-wrapper {
+.main-wrapper {
   position: relative;
   background: rgba(255, 255, 255, 0);
 }
 
 .confetti {
-  position: absolute;
+  /* position: absolute; */
   width: 100%;
   height: auto;
   z-index: 10;
 }
 
 .showtime {
-  position: absolute;
-  margin-top: 30%;
+  /* position: absolute; */
+  margin-top: -50%;
   width: 100%;
+  z-index: -10;
 }
 
 .date {
-  position: absolute;
-  margin-top: 60%;
+  /* position: absolute; */
+  margin-top: -10%;
   width: 100%;
 }
 
@@ -112,39 +95,129 @@ body {
   width: 80%;
   height: auto;
   z-index: 10;
-  margin-top: 135%;
-  position: absolute;
+  margin-top: 0%;
+  /* position: absolute; */
   margin-left: 10%;
   border-radius: 4vw;
-  box-shadow: var(--outer-shadow);
 }
 
 .sponsored {
-  position: absolute;
-  margin-top: 190%;
+  /* position: absolute; */
+  margin-top: 0%;
   width: 70%;
   margin-left: 12%;
 }
 
 .sponsors {
-  position: absolute;
+  /* position: absolute; */
   margin-top: 230%;
   width: 70%;
   margin-left: 12%;
 }
 
 .promoplaceholder {
-  position: absolute;
-  margin-top: 131.5%;
+  /* position: absolute; */
+  margin-top: -50%;
   width: 83%;
   height: auto;
   margin-left: 8.5%;
 }
 
 footer {
-  position: absolute;
-  margin-top: 200%;
+  /* position: absolute; */
+  margin-top: 0%;
   background: blur(rgba(255, 255, 255, 0.8));
   width: 100%;
   height: 20%;
+}
+
+.dy {
+  /* position: absolute; */
+  margin-left: 35%;
+}
+
+ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display: flex;
+}
+
+.dylist li {
+  font-size: 3vw;
+  color: aliceblue;
+}
+
+.dylist li:nth-child(1) {
+  color: darksalmon;
+}
+
+.dylist li:nth-child(2) {
+  color: cornflowerblue;
+}
+
+.dylist li:nth-child(3) {
+  color: bisque;
+}
+
+.dylist li:nth-child(4) {
+  color: darkturquoise;
+}
+
+.dylist li:nth-child(5) {
+  color: crimson;
+}
+
+.dylist li:nth-child(6) {
+  color: bisque;
+}
+
+.dylist li:nth-child(8) {
+  color: beige;
+}
+
+.dylist li:nth-child(9) {
+  color: darksalmon;
+}
+
+.dylist li:nth-child(10) {
+  color: aqua;
+}
+.dylist li:nth-child(11) {
+  color: lightcoral;
+}
+.dylist li:nth-child(12) {
+  color: bisque;
+}
+.dylist li:nth-child(13) {
+  color: darkcyan;
+}
+.dylist li:nth-child(14) {
+  color: bisque;
+}
+
+.powered {
+  /* position: absolute; */
+  margin-left: 45%;
+  margin-top: 0%;
+  color: white;
+  font-size: 1.5vw;
+}
+
+.trilok {
+  /* position: absolute; */
+  margin-top: 0%;
+  width: 5%;
+  margin-left: 46%;
+}
+
+.footer-wrapper {
+  height: 20% !important;
+  overflow: hidden;
+}
+.footer-wrapper {
+  /* position: absolute; */
+  background: linear-gradient(rgba(255, 255, 255, 0.05), rgba(0, 0, 0, 0.2));
+  backdrop-filter: blur(5px);
+  padding: 2%;
 }
